--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,8 @@
 {
-	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
 	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true
-		}
+		"ignore": ["out.json"]
+	},
+	"formatter": {
+		"ignore": ["out.json"]
 	}
 }
